tests/errors/err_str_list_to_int_param.mix
// ERROR: expected \[int\], got \[str\]
f(nums: [int]) ~
    print(nums)

main()
    f(["a", "b"])
